--- a/index.html
+++ b/index.html
@@ -13,3 +13,25 @@
 </body>
 
 </html>
+
+CREATE TABLE `house` (
+  `id` bigint unsigned NOT NULL AUTO_INCREMENT COMMENT '主键ID',
+  `name` varchar(20) NOT NULL DEFAULT '' COMMENT '房产名称',
+  `type` tinyint(1) NOT NULL DEFAULT '0' COMMENT '1：销售 2：出租',
+  `price` int NOT NULL COMMENT '单位元',
+  `images` varchar(1024) NOT NULL DEFAULT '' COMMENT '图片地址',
+  `area` int NOT NULL DEFAULT '0' COMMENT '面积',
+  `beds` int NOT NULL DEFAULT '0' COMMENT '卧室数量',
+  `baths` int NOT NULL DEFAULT '0' COMMENT '卫生间数量',
+  `rating` double NOT NULL DEFAULT '0' COMMENT '评级',
+  `remarks` varchar(512) NOT NULL DEFAULT '' COMMENT '房产描述',
+  `properties` varchar(512) NOT NULL DEFAULT '' COMMENT '属性',
+  `floor_plan` varchar(250) NOT NULL DEFAULT '' COMMENT '户型图',
+  `tags` varchar(20) NOT NULL DEFAULT '' COMMENT '标签',
+  `create_time` date NOT NULL COMMENT '创建时间',
+  `city_id` int NOT NULL DEFAULT '0' COMMENT '城市名称',
+  `community_id` int NOT NULL DEFAULT '0' COMMENT '小区名称',
+  `address` varchar(20) NOT NULL DEFAULT '' COMMENT '房产地址',
+  `state` tinyint(1) DEFAULT '1' COMMENT '1:上架 2：下架',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=25 DEFAULT CHARSET=utf8;
